# ttsky-spi2ws2811x16

./: .gitignore  info.yaml  pyproject.toml
.github/workflows/: docs.yaml  test.yaml
docs/: info.md
src/: spi.vhdl  top.v  top.vhdl  ws2811.vhdl
test/: Makefile  README.md  requirements.txt  top.py
