[project]
name = "ttsky-spi2ws2812x8"
version = "0.1.0"
description = "VHDL code for driving x8 WS2812 LED strips using a custom ASIC on TinyTapeout"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atomics>=1.0.3",
    "cocotb==1.9.2",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
]
